worked on portfolio hero

--- a/new.html
+++ b/new.html
@@ -23,7 +23,9 @@
       </ul>
 
       <!-- Blog posts will be inserted here dynamically -->
-      <div class="blog"></div>
+      <div class="blog">
+        
+      </div>
     </div>
 
     <script>
@@ -83,6 +85,7 @@
           });
         }
       });
+    
     </script>
   </body>
 </html>
