worked on portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <title>Portfolio</title>
     <!-- <link rel="stylesheet" href="./assets/css/portfolio.css"/> -->
 </head>
-<body id="body">
+<body id="body" class="body">
     <header>
         <nav id="navbar">
             <div id="pages">
@@ -63,8 +63,8 @@
                 <img src="/assets/images/image.png" alt="" id="user-image">
             </div>
             <div id="special">
-                <h3>Web Specialist based in Jakarta</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                <h3 id="webb">Web Specialist based in Jakarta</h3>
+                <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
 
                 <button type="button">Hire me</button>
@@ -82,3 +82,5 @@
     <script src="/assets/js/portfolio.js"></script>
 </body>
 </html>
+
+
