--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <!-- <link rel="stylesheet" href="./assets/css/portfolio.css"/> -->
+    <link rel="stylesheet" href="./assets/css/portfolio.css"/>
 </head>
 <body id="body" class="body">
     <header>
@@ -35,10 +35,9 @@
 
         </nav>
     </header>
-
     <main>
         <h1 id="myname">Natalie Sihombing</h1>
-        <div id="lastrow">
+        <div id="lastrow" class="lastrow">
             <div id="services">
                 <h3>Services</h3>
                 <div id="webdev">
@@ -60,7 +59,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div id="image">
-                <img src="/assets/images/image.png" alt="" id="user-image">
+                <img src="/assets/images/image.png" alt="" id="user-image" >
             </div>
             <div id="special">
                 <h3 id="webb">Web Specialist based in Jakarta</h3>
@@ -77,6 +76,38 @@
 
             </div>
         </div>
+
+        <form name="myForm" id="myForm" onsubmit="" > 
+            <div id="contact" >
+                <h3>Contact Me</h3>
+                <div id="form">
+                    <input type="text" placeholder="Name" id="fname" >
+                    <select id="vehicle" name="vehicle" class="vehicle">
+                        <option value="">Select</option>
+                        <option value="volvo">Volvo</option>
+                        <option value="saab">Saab</option>
+                        <option value="mercedes">Mercedes</option>
+                        <option value="audi">Audi</option>
+                    </select>
+                    <checkbox>
+                        <input type="checkbox" id="checkbox" name="checkbox">
+                        <label for="checkbox">Subscribe to Newsletter</label>
+                    </checkbox>
+
+                    <radio>
+                        <input type="radio" id="radio" name="radio">
+                        <label for="radio">Radio</label>
+                    </radio>   
+                    <input type="email" placeholder="Email" id="email" disabled>
+                    <input type="date" placeholder="Date" id="date" required>
+                    <input type="password" placeholder="Password" id="password">
+                    <input type="password" placeholder="Confirm Password" id="confirmpassword">
+                    <input type="text" placeholder="Subject" id="subject">
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+                    <button type="submit">Send</button>
+                </div>
+            </div>
+        </form>
     </main>
     
     <script src="/assets/js/portfolio.js"></script>
